# econ-rag

./: .gitignore  README.md  justfile  pyproject.toml
app/data_prep/: clean_data.py  clean_data_bm25.py  get_data.py  process_data.py  save_embeddings.py  save_embeddings2.py  utils.py
econ-rag/: get_data.py  utils.py
econ_rag/: get_data.py  process_data.py  utils.py
econ_rag/bm25/: clean_data.py
econ_rag/data/: get_data.py  process_data.py
econ_rag/search/: bm25.py
experiments/: bm25.py  check_models_retrieval.py  explore_data.ipynb  explore_data.py  trans.py
tests/: __init__.py  test_utils.py
