[project]
name = "econ-rag"
version = "0.1.0"
description = "Building a RAG application to econometric joirnals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diskcache>=5.6.3",
 "jsonlines>=4.0.0",
 "python-dotenv>=1.1.0",
 "requests>=2.32.3",
]

[tool.ruff]
lint.extend-select = ["I"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
