[project]
name = "econ-rag"
version = "0.1.0"
description = "Building a RAG application to econometric journals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adapters>=1.1.1",
    "diskcache>=5.6.3",
    "jsonlines>=4.0.0",
    "nltk>=3.9.1",
    "polars>=1.29.0",
    "python-dotenv>=1.1.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
lint.extend-select = ["I"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ipykernel",
    "pyarrow>=20.0.0",
    "plotnine>=0.14.5",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
